--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button id="size-btn">Select Size</button>
+    <div id="grid-container"></div>
 
-    
+
     <script src="script.js"></script>
 </body>
 </html>
