--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="size-btn">Select Size</button>
+    <button id="size-btn">Select size</button>
     <div id="grid-container"></div>
 
 
