--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <button id="size-btn">Select size</button>
     <div id="grid-container"></div>
+    <input type="color" id="color" value="#ff0000"></input>
+    <button id="rainbow">Rainbow</button>
 
 
     <script src="script.js"></script>
