--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="grid-container"></div>
     <input type="color" id="color" value="#ff0000"></input>
     <button id="rainbow">Rainbow</button>
+    <button id="shade">Shade</button>
+    <button id="clear">Clear</button>
 
 
     <script src="script.js"></script>
